--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/Webgl.framework.js",
         codeUrl: buildUrl + "/Webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Katboi01",
         productName: "Breakout3D",
         productVersion: "0.1",
         showBanner: unityShowBanner,
